# Agente_Monitorador_PC

./: .gitignore  _check_agent.py  _check_deps.py  guardrails.py  main.py  monitor.py  pyproject.toml  repair_tools.py  run_admin.bat  test_guardrails.py
.agents/skills/monitor/: SKILL.md
.agents/skills/monitor/dashboard/: index.html
.agents/skills/monitor/evals/: evals.json  trigger_eval.json
.agents/skills/monitor/scripts/: monitor_utils.py
