[project]
name = "agente-monitorador-pc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "graphic>=1.0.0a6",
    "lang>=0.1",
    "langchain>=1.2.13",
    "openai>=2.29.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
]
